update bytes arbitrum-foundation-arbitrum-university

--- a/src/bytes/main/arbitrum-foundation-arbitrum-university.yaml
+++ b/src/bytes/main/arbitrum-foundation-arbitrum-university.yaml
@@ -1,4 +1,4 @@
-uniqueId: c77b898e-4a27-40a7-a9e2-be9ee5040def
+uniqueId: 42a178ec-0202-410b-86d3-021dca805968
 id: arbitrum-foundation-arbitrum-university
 name: Arbitrum Foundation
 content: The Arbitrum Foundation's role in Arbitrum ecosystem
@@ -46,9 +46,7 @@ steps:
         uuid: a5999955-da89-485a-866e-d09056b06e99
         choices:
           - key: A
-            content: >-
-              Promoting partnerships and collaborations to enhance the Arbitrum
-              ecosystem
+            content: Voting for the AIPs
           - key: B
             content: >-
               Managing and guiding the evolution of the protocol to ensure its
