--- a/src/bytes/main/orbit-licensing-arbitrum-university.yaml
+++ b/src/bytes/main/orbit-licensing-arbitrum-university.yaml
@@ -1,4 +1,4 @@
-uniqueId: 109824e0-156e-4300-b366-42c21cccb8b6
+uniqueId: fbd37208-6215-40cb-8e4e-6cc8f5cdac71
 id: orbit-licensing-arbitrum-university
 name: Orbit Licensing
 content: The process and terms of Orbit chain licensing
@@ -69,9 +69,9 @@ steps:
         uuid: 9ae6c853-9bf4-426a-aec3-47938f137e54
         choices:
           - key: A
-            content: Submit a proposal to the Arbitrum DAO
+            content: Work with the previous license
           - key: B
-            content: Request a custom license from Offchain Labs
+            content: Work without License
           - key: C
             content: Obtain a separate license
           - key: D
