--- a/src/bytes/main/dao-delegation-arbitrum-university.yaml
+++ b/src/bytes/main/dao-delegation-arbitrum-university.yaml
@@ -1,4 +1,4 @@
-uniqueId: 7d6c9a9e-59e9-4802-9cb3-cedc6aa24084
+uniqueId: 4b2852f0-8dc8-4751-8f58-0ee18c41a5e2
 id: dao-delegation-arbitrum-university
 name: DAO Delegation
 content: Understanding the role of delegation
@@ -76,7 +76,9 @@ steps:
         uuid: b7695349-5cee-4afb-8315-7114d5c23f76
         choices:
           - key: A
-            content: Delegates are responsible for buying assets for token holders
+            content: >-
+              Delegates are responsible for representing token holders'
+              interests and participating in the governance process
           - key: B
             content: >-
               Delegates are responsible for managing the technical aspects of
@@ -111,7 +113,7 @@ steps:
               decision-making
           - key: C
             content: >-
-              Delegation reduces the need for active participation in the
+              Delegation increases the need for active participation in the
               governance process
           - key: D
             content: >-
