--- a/src/bytes/main/dao-proposal-submission-arbitrum-university.yaml
+++ b/src/bytes/main/dao-proposal-submission-arbitrum-university.yaml
@@ -1,4 +1,4 @@
-uniqueId: 036602be-9e3f-4c1b-b84a-95e2900e7882
+uniqueId: 681f61e2-23d4-4d9b-ad33-fc927fc8dff3
 id: dao-proposal-submission-arbitrum-university
 name: DAO Proposal Submission
 content: Submitting a proposal in DAO
@@ -71,9 +71,9 @@ steps:
         uuid: d34ed6ee-89ee-4b25-b5af-ad506a7adc21
         choices:
           - key: A
-            content: To request funds or grants for the DAO
+            content: To appoint members of the security council
           - key: B
-            content: To amend the Constitution or foundational governance document
+            content: 'To increase the $ARB token assets '
           - key: C
             content: To enable innovation, improvements, and community consensus
           - key: D
@@ -100,8 +100,8 @@ steps:
               network
           - key: B
             content: >-
-              Proposals that alter the foundational rules and procedures of the
-              DAO ecosystem
+              Proposals that alter the Constitution or foundational rules and
+              procedures of the DAO ecosystem
           - key: C
             content: Proposals that request funds or grants for the DAO
           - key: D
