update bytes what-is-arbitrum-nova-arbitrum-university

--- a/src/bytes/main/what-is-arbitrum-nova-arbitrum-university.yaml
+++ b/src/bytes/main/what-is-arbitrum-nova-arbitrum-university.yaml
@@ -1,4 +1,4 @@
-uniqueId: 5c463c60-d61e-4cc6-b6e0-3a8d2c9f2e21
+uniqueId: eb4e8da6-2b6e-40f6-a690-2f17f1a56ed8
 id: what-is-arbitrum-nova-arbitrum-university
 name: What is Arbitrum Nova?
 content: High-performance Arbitrum Chain
@@ -49,7 +49,7 @@ steps:
           - key: A
             content: >-
               A variant within the Arbitrum ecosystem that provides a
-              high-performance blockchain solution
+              low-performance blockchain solution
           - key: B
             content: A protocol that operates on the AnyTrust protocol
           - key: C
