--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-13T12:11:38.125Z'
+created: '2023-11-22T12:24:16.752Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -38,6 +38,11 @@ steps:
       on-chain.
 
 
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/introduction_to_arbitrum_arbitrum_university_794/1700655777087_first_4%20guides.png"/>
+      </div>
+
+
       ## Benefits of Layer 2
 
 
@@ -52,6 +57,11 @@ steps:
 
       3. **Improved Speed:** Transactions can be completed faster on Layer 2, as
       they are not subject to the longer processing times of the main chain.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/introduction_to_arbitrum_arbitrum_university_794/1700655838266_benefits.png"/>
+      </div>
 
 
       4. **Enhanced Scalability:** Layer 2 can scale independently from the main
