--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-22T12:39:15.563Z'
+created: '2023-11-22T12:57:40.794Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -171,6 +171,11 @@ steps:
       a verifiable record of the rollup's state changes on the Layer 1
       blockchain. This mechanism ensures that the state of the rollup can be
       trusted and verified.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/introduction_to_arbitrum_arbitrum_university_794/1700657827811_roll_up%20working.png"/>
+      </div>
 
 
       #### Step 4: Fraud Proof 
