update guide Introduction to Arbitrum

--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-22T12:57:40.794Z'
+created: '2023-11-22T13:04:07.509Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -211,7 +211,7 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 3cc2ab75-c65d-4157-b7d9-c475e3d481f0
-  - content: >+
+  - content: >-
       Arbitrum ecosystem consists of various chains with distinct features that
       utilise unique technologies that enable ethereum scalability. The major
       arbitrum chains include.
@@ -237,6 +237,11 @@ steps:
       ensures the speedy and efficient handling of Level 2 transaction data
       before it is finalized on Ethereum's main chain. Arbitrum Nova is tailored
       for applications where high throughput and affordability are prioritized.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/introduction_to_arbitrum_arbitrum_university_794/1700658222987_types_of%20chains.png"/>
+      </div>
 
 
       ### Arbitrum Orbit
@@ -281,7 +286,6 @@ steps:
       Due to the multi-round fraud proof mechanism, transaction finality on
       Arbitrum can be slower compared to some other rollups, but this trade-off
       allows for lower fees because of reduced Layer 1 computation reliance​.
-
     name: Arbitrum Chains
     stepItems: []
     uuid: 6aae4c48-10e0-494b-bd9e-a8404f42515d
