update guide Introduction to Arbitrum

--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2023-11-22T13:10:04.934Z'
+created: '2023-11-22T13:20:52.689Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -349,6 +349,11 @@ steps:
       governance participation ensures a democratic, community-aligned platform.
       This support system is vital for user operations and the network's ongoing
       enhancement and resilience.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/introduction_to_arbitrum_arbitrum_university_794/1700659235757_ecosystem.png"/>
+      </div>
 
 
       ## Decentralize governance
